tree successor function and debug flag based assertion helper

--- a/red_black_tree/Makefile
+++ b/red_black_tree/Makefile
@@ -15,7 +15,7 @@ rbtree.so: rbtree.o
 	$(CC) $(WARN) $(DEBUG) $(SHAREDLIB_FLAGS) -o rbtree.so rbtree.o
 
 rbtree.o: RBTree.cpp RBNode.h Key.h RBTree.h
-	$(CC) $(WARN) $(DEBUG) $(INCLUDES) $(FPIC_OBJ) -o rbtree.o -c RBTree.cpp 
+	$(CC) -D _DEBUG_BUILD_ $(WARN) $(DEBUG) $(INCLUDES) $(FPIC_OBJ) -o rbtree.o -c RBTree.cpp 
 
 .PHONY: clean
 
